修改字体为宋体，但是主页快速索引漏出了js的代码块

--- a/source/_posts/雨霖铃.md
+++ b/source/_posts/雨霖铃.md
@@ -1,18 +1,28 @@
 ---
-title: 《雨霖铃》 ——柳永
-tags: 诗、词、绝句
+title: 今宵酒醒何处？杨柳岸，晓风残月。——《雨霖铃》
+tags: [词,柳永,婉约]
 categories: 诗、词、绝句
+index_img: /img_posts/雨霖铃.jpg
+banner_img: /img_posts/雨霖铃.jpg
 ---
-# 雨霖铃
+# <center>雨霖铃</center>
 
-**柳永**
+**<center>[北宋]柳永</center>**
 
-寒蝉凄切，对长亭晚，骤雨初歇。  
-都门帐饮无绪，留恋处，兰舟催发。  
-执手相看泪眼，竟无语凝噎。  
-念去去，千里烟波，暮霭沉沉楚天阔。
+<center>寒蝉凄切，对长亭晚，骤雨初歇。</center>
+<center>都门帐饮无绪，留恋处，兰舟催发。</center>
+<center>执手相看泪眼，竟无语凝噎。</center>
+<center>念去去，千里烟波，暮霭沉沉楚天阔。</center>
+</br>
+<center>多情自古伤离别，更那堪，冷落清秋节！</center>
+<center>今宵酒醒何处？杨柳岸，晓风残月。</center>
+<center>此去经年，应是良辰好景虚设。</center>
+<center>便纵有千种风情，更与何人说？</center>
 
-多情自古伤离别，更那堪，冷落清秋节！  
-今宵酒醒何处？杨柳岸，晓风残月。  
-此去经年，应是良辰好景虚设。  
-便纵有千种风情，更与何人说？
+<style>
+  /* 只设置 markdown 字体 */
+  .markdown-body {
+    font-family: KaiTi,"Microsoft YaHei",Georgia, sans, serif;
+    font-size: 20px;
+  }
+</style>
