--- a/source/_posts/2_折桂令·春情.md
+++ b/source/_posts/2_折桂令·春情.md
@@ -11,9 +11,9 @@ categories: 诗、词、绝句
 <center>身似浮云，心如飞絮，气若游丝。</center>
 <center>空一缕余香在此，盼千金游子何之。</center>
 <center>证候来时，正是何时？灯半昏时，月半明时。</center>
-
+<!-- more -->
 <style>
-    /* 宋体 */
+    /* 楷体 */
   /* 只设置 markdown 字体 */
   .markdown-body {
     font-family: KaiTi,"Microsoft YaHei",Georgia, sans, serif;
