--- a/source/_posts/2_折桂令·春情.md
+++ b/source/_posts/2_折桂令·春情.md
@@ -2,6 +2,8 @@
 title: 平生不会相思，才会相思，便害相思。——《折桂令·春情》
 tags: [词,爱情,婉约]
 categories: 诗、词、绝句
+index_img: /img_posts/春情.jpg
+banner_img: /img_posts/春情.jpg
 sticky: 99
 date: 2025-01-06 09:00:00
 ---
