--- a/source/_posts/3_一剪梅_李清照.md
+++ b/source/_posts/3_一剪梅_李清照.md
@@ -1,6 +1,6 @@
 ---
 title: 此情无计可消除，才下眉头，却上心头。——《一剪梅》
-tags: [词,爱情,婉约,相思，李清照]
+tags: [词,爱情,婉约,相思,李清照]
 categories: 诗、词、绝句
 index_img: /img/关于背景.jpg
 banner_img: /img/关于背景.jpg
